--- a/force-app/main/default/lwc/lightningExampleDataTableWithRowNumbers/lightningExampleDataTableWithRowNumbers.html
+++ b/force-app/main/default/lwc/lightningExampleDataTableWithRowNumbers/lightningExampleDataTableWithRowNumbers.html
@@ -5,8 +5,7 @@
                 <lightning-datatable key-field="id" data={data} show-row-number-column row-number-offset={rowOffset} hide-checkbox-column columns={columns}></lightning-datatable>
             </div>
             <div class="slds-m-around--medium">
-                <lightning-button label="Increase row offset" onclick={increaseRowOffset}>
-                </lightning-button>
+                <lightning-button label="Increase row offset" onclick={increaseRowOffset}></lightning-button>
             </div>
         </div>
     </lightning-card>
